<com.szzk.percent.support.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:imagecontrol="http://schemas.android.com/apk/res-auto" 
     android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 <com.szzk.percent.support.PercentRelativeLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp"     
        app:layout_heightPercent="12%w"    
        android:background="@drawable/top_bg"
         >
         <TextView
            android:id="@+id/title_tv"
            app:layout_heightPercent="11%w"     
         	android:layout_width="match_parent"
         	android:layout_height="0dp"
         	android:gravity="center"
         	android:text="@string/test_printer"
         	app:layout_textSizePercent="5%w"         	  
         	android:textColor="#fff"
         	android:layout_centerVertical="true"
         />
        <ImageView 
            android:id="@+id/back_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="8%w"
        	app:layout_heightPercent="8%w"
        	android:background="@drawable/back"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="5dp"
        	android:onClick="back"
            />   
	 </com.szzk.percent.support.PercentRelativeLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/top_bg"
        android:id="@+id/bt_text"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
        
        app:layout_textSizePercent="5%w"       
        android:text="@string/printtext"
         />
      <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/top_bg"
        android:id="@+id/bt_barcode"
        android:layout_alignParentRight="true"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         app:layout_textSizePercent="5%w"     
        android:text="@string/printbarcode"
        />
       <Button
        android:id="@+id/bt_qr"
        android:layout_below="@+id/bt_barcode"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"    
        android:text="@string/printqrcode"
        />
        <Button
        android:id="@+id/bt_image"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_barcode"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"    
        android:text="@string/printpicture"
        />

       <Button
        android:id="@+id/bt_printtestpage"
        android:layout_below="@+id/bt_image"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"     
         android:onClick="printtestpage"
        android:text="@string/printtestpage"
        
        />
       <Button
        android:id="@+id/bt_checkpage"
        android:layout_below="@+id/bt_image"
        android:layout_alignParentRight="true"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"     
         android:onClick="checkpage"  
        android:text="@string/check_for_paper"
         />
       <Button
        android:id="@+id/bt_cuttall"
        android:layout_below="@+id/bt_checkpage"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"   
        android:text="@string/cuttall_paper"
        />
       <Button
        android:id="@+id/bt_cutting"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_checkpage"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w"    
        android:text="@string/cutting_paper"
         />
		<Button
        android:id="@+id/bt_nocutting"
        android:layout_below="@+id/bt_cutting"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w" 
          android:visibility="gone"      
        android:text=""
         />
	    <Button
         android:id="@+id/bt_queueprint"
        android:layout_below="@+id/bt_nocutting"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w" 
        android:text="@string/queue_print"
         />
	    <Button
        android:id="@+id/bt_textimage"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_nocutting"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w" 
        android:text="文字图片打印"
         />
		<Button
        android:id="@+id/bt_printdemo1"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_queueprint"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w" 
        android:text="两寸小票打印"
         />
		<Button
        android:id="@+id/bt_printdemo2"
        android:layout_below="@+id/bt_queueprint"
         android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_heightPercent="11%w"
        app:layout_widthPercent="47%w"
         android:layout_marginTop="10dp"
         app:layout_textSizePercent="5%w" 
        android:text="三寸小票打印"
         />
		<TextView 
		       android:layout_below="@+id/bt_printdemo2"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="#ffffff"
        	android:text="66666"
        	android:id="@+id/textiamge_tv"
        	android:visibility="invisible"
		    />
</com.szzk.percent.support.PercentRelativeLayout>
